// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<EventCard /> tests > should match the snapshot 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow-sm lg:max-w-xs group hover:border-primary transition-colors border-dashed cursor-default"
    role="listitem"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 pb-3"
    >
      <div
        class="font-semibold tracking-tight flex items-center text-xs justify-between"
      >
        <time
          class="text-xs font-extrabold"
        >
          23/1/2024, 11:16:53 a. m.
        </time>
      </div>
      <div
        class="text-sm text-muted-foreground"
      >
        <a
          class="flex items-center space-x-2"
          href="https://foo.bar"
          rel="noopener noreferrer nofollow"
          target="_blank"
        >
          <span
            class="relative flex shrink-0 overflow-hidden max-h-7 rounded-full w-7 h-7"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-github"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
                />
                <path
                  d="M9 18c-4.51 2-5-2-7-2"
                />
              </svg>
            </span>
          </span>
          <span
            class="text-xs underline-offset-2 hover:underline"
          >
            johndoe
          </span>
        </a>
      </div>
    </div>
    <div
      class="p-6 text-xs leading-relaxed text-left wrap-break-word pt-0 pb-2"
    />
    <div
      class="items-center p-6 pt-0 flex justify-end gap-x-2"
    >
      <div
        class="leading-tight"
      >
        <span
          class="text-muted-foreground block text-sm"
        >
          PushEvent
        </span>
      </div>
      <span
        class="text-background"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-merge inline rounded-full transition-colors p-1 bg-red-400"
          data-testid="event-action"
          fill="none"
          height="25"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M6 21V9a9 9 0 0 0 9 9"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`<EventCard /> tests > should render the optional fields if they are given 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow-sm lg:max-w-xs group hover:border-primary transition-colors border-dashed cursor-default"
    role="listitem"
  >
    <div
      class="flex flex-col space-y-1.5 p-6 pb-3"
    >
      <div
        class="font-semibold tracking-tight flex items-center text-xs justify-between"
      >
        <time
          class="text-xs font-extrabold"
        >
          23/1/2024, 11:16:53 a. m.
        </time>
        <div
          class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
        >
          main
        </div>
      </div>
      <div
        class="text-sm text-muted-foreground"
      >
        <a
          class="flex items-center space-x-2"
          href="https://foo.bar"
          rel="noopener noreferrer nofollow"
          target="_blank"
        >
          <span
            class="relative flex shrink-0 overflow-hidden max-h-7 rounded-full w-7 h-7"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-github"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
                />
                <path
                  d="M9 18c-4.51 2-5-2-7-2"
                />
              </svg>
            </span>
          </span>
          <span
            class="text-xs underline-offset-2 hover:underline"
          >
            johndoe
          </span>
        </a>
      </div>
    </div>
    <div
      class="p-6 text-xs leading-relaxed text-left wrap-break-word pt-0 pb-2"
    >
      <strong
        class="font-bold"
      >
        Commit title
      </strong>
      <div>
        <p
          class="inline text-muted-foreground cursor-pointer"
        >
          Commit detail
        </p>
        <a
          class="inline font-semibold"
          href="https://github.com/johndoe"
          rel="noopener noreferrer nofollow"
          target="_blank"
          title="Link"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-github ml-2 inline bg-primary rounded-full p-1 h-5 w-5 text-background transition-colors hover:bg-primary-foreground hover:text-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
            />
            <path
              d="M9 18c-4.51 2-5-2-7-2"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class="items-center p-6 pt-0 flex justify-end gap-x-2"
    >
      <div
        class="leading-tight"
      >
        <span
          class="text-muted-foreground block text-sm"
        >
          PushEvent
        </span>
        <span
          class="capitalize text-xs"
        >
          WatchEvent
        </span>
      </div>
      <span
        class="text-background"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-git-merge inline rounded-full transition-colors p-1 bg-red-400"
          data-testid="event-action"
          fill="none"
          height="25"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="18"
            cy="18"
            r="3"
          />
          <circle
            cx="6"
            cy="6"
            r="3"
          />
          <path
            d="M6 21V9a9 9 0 0 0 9 9"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
